Fixed typos after testing and added .gitignore file

--- a/jz/readme/jz-readme-english.html
+++ b/jz/readme/jz-readme-english.html
@@ -56,6 +56,7 @@
 			The Jerry Zinger Show allows the PC and his companions to view (and take part in) the live talk show of Jerry Zinger, well known Amnish celebrity! Shows are daily, and executed largely by cutscenes. The programme is as follows:
 		</p>
 		<div class="important">
+		<p style="margin-top: 1%;">
 		  <ol>
 			<li>"My ex is an evil mastermind" (Irenicus, Ellesime)</li>
 			<li>"Racial tension" (Korgan)</li>
@@ -67,6 +68,7 @@
 			<li>"My husband's mistress" (Keldorn)</li>
 			<li>"Who's your daddy?" (Aerie)</li>
 		  </ol>
+		</p>
 		</div><br>
 
 		<p>
@@ -130,7 +132,7 @@
 			Here is the recommended installation order:
 		</p>
 		<ul style="margin-left: 5%;">
-			<li>Please install The Jerry Zinger Show after TobEx, BG2 Fixpack and EET.</li>
+			<li>Please install The Jerry Zinger Show after TobEx, BG2 Fixpack, and EET.</li>
 			<li>Please install The Jerry Zinger Show before EET_End, and any final "biffing" routines.</li>
 		</ul><br>
 
@@ -363,8 +365,8 @@
 
  		  <ul class="version-list c1">
 			<li><a href="http://www.spellholdstudios.net/">Spellhold Studios</a> team for hosting the mod (<a href="http://www.shsforums.net">Forums</a>).</li>
-			<li>MorningGlory</li>
-			<li>Jerry Springer</li>
+			<li>MorningGlory.</li>
+			<li>Jerry Springer.</li>
 		  </ul><br>
 
 
@@ -379,12 +381,12 @@
 			<li><a href="http://www.shsforums.net/topic/31285-infinity-explorer-v085/">Infinity Explorer</a>, by Dmitry Jemerov / bigmoshi.</li>
 			<li><a href="https://www.gibberlings3.net/mods/tools/dltcep/"><acronym title="Dragonlance Total Conversion Editor Pro">DLTCEP</acronym></a>, by Avenger.</li>
 			<li><a href="https://gibberlings3.github.io/iesdp/"><acronym title="Infinity Engine Structures Description Project">IESDP</acronym></a>, maintained by igi and lynx.</li>
-			<li>IETME by the TBG team.</li>
-			<li>AVI to Interplay MVE converter by ABel.</li>
+			<li><a href="http://www.gameapps.com/ietme.htm">IE Tileset Map Editor</a>, by Theo de Morée and the TBG team.</li>
+			<li>AVI to Interplay MVE converter, by ABel.</li>
 			<li>Vegas 5 by Sony Pictures Digital Inc.</li>
-			<li><a href="http://www.context.cx/">ConTEXT Text Editor</a>, by Eden Kirin.</li>
-			<li>UltraEdit-32 by IDM - used with the highlighters made by Shed.</li>
-			<li>NSIS by Justin Frankel.</li>
+			<li><a href="https://www.filecroco.com/download-context/">ConTEXT Text Editor</a>, by Eden Kirin.</li>
+			<li><a href="https://www.ultraedit.com/">UltraEdit-32</a>, by IDM - used with the highlighters made by Shed.</li>
+			<li><a href=""https://nsis.sourceforge.io/Main_Page">NSIS</a>, by Justin Frankel.</li>
 			<li>Oggdec.</li>
 		</ul><br>
 
@@ -429,7 +431,7 @@
 				<li style="margin-left:-4%; margin-right:-6%;">Added <acronym title="Weimer Dialogue Utility">WeiDU</acronym>'s built-in <span class="tp2" style="color: purple;">HANDLE_CHARSETS</span> function to convert string entries for EE games.</li>
 				<li style="margin-left:-4%; margin-right:-6%;">Added <span class="tp2" style="color: green;">ADD_JOURNAL</span> function for EE games.</li>
 				<li style="margin-left:-4%; margin-right:-6%;">Rewrote install procedure to use <acronym title="Weimer Dialogue Utility">WeiDU</acronym>'s built-in <span class="tp2" style="color: purple;">HANDLE_AUDIO</span> function.</li>
-				<li style="margin-left:-4%; margin-right:-6%;">Provided alternative TIS and PVRZ files for the EE games.</li>
+				<li style="margin-left:-4%; margin-right:-6%;">Provided alternative TIS and PVRZ files for EE games (used Tipun's function to find free PVRZ-files indexes on EE-games).</li>
 				<li style="margin-left:-4%; margin-right:-6%;">Provided wbm movie file for the EE games.</li>
 			  </ul>
 			<li>Replaced deprecated <span class="tp2" style="color: red;">DECOMPILE_DLG_TO_D</span> plus <span class="tp2" style="color: red;">COMPILE_D_TO_DLG</span> and <span class="tp2" style="color: red;">DECOMPILE_BCS_TO_BAF</span> plus <span class="tp2" style="color: red;">COMPILE_BAF_TO_BCS</span> processes with more accurate <span class="tp2" style="color: red;">DECOMPILE_AND_PATCH</span> command.</li>
@@ -443,7 +445,7 @@
 			<li>Updated OggDec to v1.9.7 and added sox v14.4.1 for mac</li>
 			<li>Added archive libiconv-1.9.2-1-src.7z with iconv licence info.</li>
 			<li>Added <acronym title="Weimer Dialogue Utility">WeiDU</acronym> installer (v247).</li>
-			<li>Uploaded mod to official Spellhold Studios GitHub mirror account.</li>
+			<li>Uploaded mod to official <a href="https://github.com/SpellholdStudios">Spellhold Studios GitHub mirror account</a>.</li>
 		  </ul><br><br>
 
 		<h6>Version 4 &nbsp;(February 14, 2011)</h6>
