Included Linux and macOS versions in the same package (thanks AL|EN's Infinity Auto Packager tool!)

--- a/jz/readme/jz-readme-english.html
+++ b/jz/readme/jz-readme-english.html
@@ -386,8 +386,9 @@
 			<li>Vegas 5 by Sony Pictures Digital Inc.</li>
 			<li><a href="https://www.filecroco.com/download-context/">ConTEXT Text Editor</a>, by Eden Kirin.</li>
 			<li><a href="https://www.ultraedit.com/">UltraEdit-32</a>, by IDM - used with the highlighters made by Shed.</li>
-			<li><a href=""https://nsis.sourceforge.io/Main_Page">NSIS</a>, by Justin Frankel.</li>
+			<li><a href="https://nsis.sourceforge.io/Main_Page">NSIS</a>, by Justin Frankel.</li>
 			<li>Oggdec.</li>
+			<li><a href="https://forums.beamdog.com/discussion/78364/infinity-auto-packager-automatically-generate-and-adds-mod-packages-to-release-when-you-publish-it">Infinity Auto Packager</a>, by AL|EN.</li>
 		</ul><br>
 
 
@@ -441,7 +442,7 @@
 			<li>Updated deprecated modding tools links.</li>
 			<li>Re-formated, updated and renamed readme file to <em>jz-readme-english.html</em>, then moved it into new &#x1F4C1; "<em>readme</em>" folder.</li>
 			<li>Lower cased files.</li>
-			<li>Included Linux and macOS versions in the same package (thanks AL|EN!).</li>
+			<li>Included Linux and macOS versions in the same package (thanks AL|EN's Infinity Auto Packager tool!).</li>
 			<li>Updated OggDec to v1.9.7 and added sox v14.4.1 for mac</li>
 			<li>Added archive libiconv-1.9.2-1-src.7z with iconv licence info.</li>
 			<li>Added <acronym title="Weimer Dialogue Utility">WeiDU</acronym> installer (v247).</li>
