--- a/jz/readme/jz-readme-english.html
+++ b/jz/readme/jz-readme-english.html
@@ -192,10 +192,10 @@
 		<hr style="width: 90%;"/><br>
 
 
-		<h3>macOS</h3>
+		<h3>Mac OS</h3>
 
 		<p style="margin-top:2%;">
-			The Jerry Zinger Show for macOS is distributed in the same compressed archive and includes a <acronym title="Weimer Dialogue Utility">WeiDU</acronym> installer.
+			The Jerry Zinger Show for Mac OS is distributed in the same compressed archive and includes a <acronym title="Weimer Dialogue Utility">WeiDU</acronym> installer.
 		</p>
 		<p>
 			First, extract the files from the archive into your game directory. On successful extraction, there should be a &#x1F4C1; jz folder, setup-jz and setup-jz.command files in your game folder. To install, double-click <strong><span class="weidu">&nbsp;setup-jz.command&nbsp;</span></strong> and follow the instructions on screen.
@@ -442,7 +442,7 @@
 			<li>Updated deprecated modding tools links.</li>
 			<li>Re-formated, updated and renamed readme file to <em>jz-readme-english.html</em>, then moved it into new &#x1F4C1; "<em>readme</em>" folder.</li>
 			<li>Lower cased files.</li>
-			<li>Included Linux and macOS versions in the same package (thanks AL|EN's Infinity Auto Packager tool!).</li>
+			<li>Included Linux and Mac OS versions in the same package (thanks AL|EN's Infinity Auto Packager tool!).</li>
 			<li>Updated OggDec to v1.9.7 and added sox v14.4.1 for mac</li>
 			<li>Added archive libiconv-1.9.2-1-src.7z with iconv licence info.</li>
 			<li>Added <acronym title="Weimer Dialogue Utility">WeiDU</acronym> installer (v247).</li>
